fix: made code more visible

--- a/output/v4/styles/clean-jsdoc-theme-light.css
+++ b/output/v4/styles/clean-jsdoc-theme-light.css
@@ -330,7 +330,7 @@ body.light {
 }
 
 .light code {
-    background: #eee;
+    background: #ddd;
     color: #000;
 }
 
