--- a/static/styles/clean-jsdoc-theme-dark.css
+++ b/static/styles/clean-jsdoc-theme-dark.css
@@ -121,7 +121,7 @@ tt,
 code,
 kbd,
 samp {
-    background: #222;
+    background: #333;
 }
 
 .signature-attributes {
